objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Amount_Discount__c</fullName>
        <formula>(PricebookEntry.UnitPrice -  UnitPrice )* Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List Price minus Sales Price times quantity</inlineHelpText>
        <label>$ Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CW_Item_Description__c</fullName>
        <formula>Product2.CW_Item_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_N_C_Flag__c</fullName>
        <label>CW N/C Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <formula>Product2.CW_Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Location__c</fullName>
        <label>Customer Location</label>
        <length>51</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Spec__c</fullName>
        <label>Customer Spec #</label>
        <length>51</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Direct_Current_Price_Number__c</fullName>
        <formula>DA_Direct_Current_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Direct_Current_Price__c</fullName>
        <formula>Product2.Direct_Current_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_ECommerce_Display_Name__c</fullName>
        <formula>Product2.ECommerce_Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Image__c</fullName>
        <formula>Product2.Product_Image_Thumbnail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Item_Number__c</fullName>
        <formula>DMMSSku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Member_Price_Number__c</fullName>
        <formula>DA_Member_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Member_Price__c</fullName>
        <formula>Product2.Member_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Quantity__c</fullName>
        <formula>Floor(Quantity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Total_Formula__c</fullName>
        <formula>If( NOT(ISBLANK( Quote.Opportunity.Account.X12_Digit_Member__c )), Quantity * DA_Member_Price__c, Quantity*DA_Direct_Current_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA Total Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Total_Number__c</fullName>
        <formula>DA_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Total__c</fullName>
        <label>Total</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMMSSku__c</fullName>
        <formula>Product2.DMMSSku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMMSSku</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <formula>( Unit_Price__c - UnitPrice) / Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ELC_Update__c</fullName>
        <description>for use as a recipient of a field update</description>
        <label>ELC Update</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ELC__c</fullName>
        <formula>Product2.ELC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ELC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Delivery_Date__c</fullName>
        <label>Est. Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Customer_Delivery_Date__c</fullName>
        <label>Expected Customer Delivery Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 days</fullName>
                </value>
                <value>
                    <fullName>3-7 days</fullName>
                </value>
                <value>
                    <fullName>1-2 weeks</fullName>
                </value>
                <value>
                    <fullName>2-3 Weeks</fullName>
                </value>
                <value>
                    <fullName>3-4 Weeks</fullName>
                </value>
                <value>
                    <fullName>4-6 Weeks</fullName>
                </value>
                <value>
                    <fullName>60-90 days</fullName>
                </value>
                <value>
                    <fullName>45-60 days</fullName>
                </value>
                <value>
                    <fullName>120-150 days</fullName>
                </value>
                <value>
                    <fullName>Est. to Ship TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Method__c</fullName>
        <label>Fulfillment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COM/COL</fullName>
                </value>
                <value>
                    <fullName>Contract Inventory</fullName>
                </value>
                <value>
                    <fullName>Contract SPO</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                </value>
                <value>
                    <fullName>Retail Inventory</fullName>
                    <default>true</default>
                    <label>Retail Inventory</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsQuoteSynced__c</fullName>
        <formula>Quote.IsSyncing</formula>
        <label>IsQuoteSynced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Member__c</fullName>
        <formula>NOT(ISBLANK(Quote.Opportunity.Account.X12_Digit_Member__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total_List_Price__c</fullName>
        <formula>Unit_Price__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_total_Contract_Price__c</fullName>
        <formula>(UnitPrice  * Quantity) +   Surcharge_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item total Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMU__c</fullName>
        <formula>(UnitPrice- ELC__c )/ UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItemId__c</fullName>
        <formula>OpportunityLineItem.Id</formula>
        <label>OpportunityLineItemId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ovr_Code__c</fullName>
        <label>Ovr Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pdct_Total_Weight__c</fullName>
        <formula>Product2.Package_Weight__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pdct Total Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <formula>Product2.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product2.Actual_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Product_Name__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_w_Shipping_Fees__c</fullName>
        <label>Products w/Shipping Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Item_Description__c</fullName>
        <label>Quote Item Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Item__c</fullName>
        <label>Quote Item</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Handling_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Handling Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <formula>Product2.SKU_Ship_Via__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Via</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sidemark__c</fullName>
        <label>Sidemark</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <formula>Product2.CW_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surcharge_Amount__c</fullName>
        <inlineHelpText>Applied on a product level.  This field will be set by Workflow if any Products on this order contain surcharges.  The surcharges will then be added automatically to the total line item contract price.</inlineHelpText>
        <label>Surcharge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Surcharges__c</fullName>
        <formula>Product2.Surcharge_Per_Item__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Surcharges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Price_for_Quote_Line_Item__c</fullName>
        <formula>Line_Item_total_Contract_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Price for Quote Line Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>